[package]
name = "uzi-pool"
version = "0.2.6"
edition = "2021"

[dependencies]
tiny_http = "0.11"
rust-randomx = "0.7.0"
num_cpus = "1.0"
rand = "0.8.5"
rand_mnemonic = { package = "rand", version = "0.6.0" }
hex = "0.4.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
ureq = { version = "2.4.0", features = ["json"], default-features = false }
colored = "2.0.0"
log = "0.4"
env_logger = "0.9.0"
bazuka = { git = "https://github.com/ziesha-network/bazuka", default_features = false, features = ["client"] }
home = "0.5.3"
bincode = "1.3.3"
tokio = { version = "1", features = ["rt"]}
chrono = "0.4.23"
